<resources>
    <string name="app_name">OKKY Exp</string>
    <string name="exit_msg">한 번 더 누르시면 종료됩니다.</string>

    <string name="splash_title">All That Developer</string>
    <string name="copyright">eBrain Management</string>

    <string name="txt_permission_desc_1">서비스 이용을 위해 다음의 권한을 사용하고 있으며 이를 확인합니다.</string>
    <string name="txt_permission_denied">앱 이용을 위한 권한 승인이 진행되지 않았습니다.</string>
    <string name="txt_login_session_not_valid">로그인 세션이 유효하지 않습니다.</string>
    <string name="txt_invalid_id_or_pwd">아이디 또는 비밀번호가 올바르지 않습니다.</string>
    <string name="txt_selection">선택하세요!</string>
    <string name="nav_header_desc">Community for developers</string>
    <string name="txt_not_support">이 앱에서는 지원하지 않습니다.</string>

    <string name="txt_context_menu_title">선택하세요.</string>
    <string name="txt_context_menu_download">다운로드</string>
    <string name="txt_context_menu_share">내보내기</string>
    <string name="txt_context_menu_download_start">다운로드가 시작 되었습니다.</string>
    <string name="txt_context_menu_download_fail">다운로드가 되지 않았습니다.</string>

    <string name="drawer_header_text">Drawer Header</string>
    <string name="navi_qna">Q&amp;A</string>
    <string name="navi_qna_0">Tech Q&amp;A</string>
    <string name="navi_qna_1">Blockchain Q&amp;A</string>

    <string name="navi_tech">Tech</string>
    <string name="navi_tech_0">IT News &amp; 정보</string>
    <string name="navi_tech_1">Tips &amp; 강좌</string>

    <string name="navi_comm">커뮤니티</string>
    <string name="navi_comm_0">공지사항</string>
    <string name="navi_comm_1">사는얘기</string>
    <string name="navi_comm_2">포럼</string>
    <string name="navi_comm_3">IT행사</string>
    <string name="navi_comm_4">정기모임/스터디</string>
    <string name="navi_comm_5">학원홍보</string>

    <string name="navi_jobs">Jobs</string>
    <string name="navi_jobs_0">좋은회사/나쁜회사</string>
    <string name="navi_jobs_1">구인</string>
    <string name="navi_jobs_2">구직</string>
    <string name="navi_jobs_3">eBrainJobs</string>
    <string name="navi_jobs_4">구인(정규직)</string>

    <string name="navi_columns">컬럼</string>

    <string name="navi_contact">Contact</string>
    <string name="navi_bug_report">Bug Report(Github issue)</string>
    <string name="navi_facebook">Facebook</string>
    <string name="navi_source">Source</string>

    <string name="settings">설정</string>

    <string name="settings_menu_header_text">게시판 메뉴를 ON/OFF합니다.</string>
    <string name="settings_menu">메뉴 설정</string>
    <string name="settings_env">기타환경 설정</string>
    <string name="settings_push_header_text_01">푸시수신 상태를 ON/OFF합니다.</string>
    <string name="settings_push_header_text_02">\n수신 상태 설정과 관계없이 중요알림은 발송됩니다.</string>
    <string name="settings_push">알림 설정</string>
    <string name="settings_push_accept">알림 메세지 수신</string>
    <string name="settings_info">앱 정보</string>

    <string name="txt_app_title">OKKY.EXPLORER</string>
    <string name="txt_app_version">version %s</string>
    <string name="txt_app_desc">
        개발자 커뮤티티 사이트 OKKY(http://okky.kr) Mobile Web을 패키징한 앱입니다.
        \n\n이 앱은 OKKY의 공식앱이 아니며 제공되는 모든 컨텐츠의 저작권은 OKKY에 있습니다.
        \n\n개선사항이나 문의는 아래에 의견 남겨주세요.
        \nhttps://github.com/neoburi/okky-android/issues
    </string>
    <string name="txt_opensource_license">OPEN SOURCE LICENSE</string>
    <string name="txt_app_thanks_desc">
        EasyPermissions\n
        https://github.com/googlesamples/easypermissions
        \n\n
        WaveLoading\n
        https://github.com/race604/WaveLoading
        \n\n
        Otto - An event bus by Square\n
        https://github.com/square/otto
        \n\n
        SpannableText\n
        https://github.com/meganz/android/blob/master/app/src/main/java/mega/privacy/android/app/components/SimpleSpanBuilder.java
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_notification_channel_id">Default</string>

    <string name="title_share_target_selection">공유할 게시판을 선택해주세요.</string>
    <string name="txt_share_canceled">공유가 취소되었습니다.</string>
    <string name="txt_confirm">확인</string>
    <string name="txt_cancel">취소</string>
    <string name="api_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAoLg+AAHbj5u7kcLWPY/Eip8LzHq9vuS0e9tfJuRgxbxIOJVvBA+AqHZGKtmFPIANxIytFiv++uMG4mYOfqQbKfPiCylYfxgFkVPpJf6lphcafv7ksPHoIGdeDmcSCPMlAYuR9jvdX18G3LJWrCyHPdWg3SB9q9zxcZwDC2tbqEQ2353H7dwbFjmMhf8tyvX6xmmo0XeZRPNGDfBkYRlRkrUvwaJkmpFBxyHmZNcDANd+NNQdrQegr2dtZIXr6rhvXeMMxCz8mz/wgIrxVNepdPsH7L2gpNTV0Pab+Y85sI6q7BTrVm2NU5Z0MIJKSZdYHRYS7QmX1fs4OO3HbkiLwQIDAQAB</string>
</resources>
